--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.19"}
 redis = "^4.6.0"
 fastapi = "^0.100.1"
 uvicorn = "^0.23.2"
+alembic = "^1.11.1"
 
 
 [build-system]
