--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ redis = "^4.6.0"
 fastapi = "^0.100.1"
 uvicorn = "^0.23.2"
 alembic = "^1.11.1"
+phonenumbers = "^8.13.17"
+email-validator = "^2.0.0.post2"
 
 
 [build-system]
