--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ uvicorn = "^0.23.2"
 alembic = "^1.11.1"
 phonenumbers = "^8.13.17"
 email-validator = "^2.0.0.post2"
+cachetools = "^5.3.1"
 
 
 [build-system]
