--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,7 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm+all,python
+
+node_modules
+package*.json
+.serverless
