--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ authors = [
 ]
 dependencies = [
     "aiogram>=3.10.0",
-    "fastapi>=0.111.1",
-    "mangum>=0.17.0",
-    "pydantic-settings>=2.3.4",
+    "fastapi==0.111.0",
+    "cachetools>=5.3.3",
     "jinja2>=3.1.4",
-    "cachetools>=5.4.0",
-    "sqlalchemy>=2.0.31",
-    "alembic>=1.13.2",
-    "asyncpg>=0.29.0",
+    "pydantic-settings==2.3.4",
+    "uvicorn==0.30.1",
+    "mangum>=0.17.0",
+    "aiogram-dialog>=2.1.0",
+    "email-validator>=2.2.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -32,4 +32,4 @@ dev-dependencies = []
 allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/admission_bot"]
+packages = ["app"]
