--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,6 +35,6 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install Plugin and Deploy
-        run: npx serverless deploy
+        run: npx serverless deploy --stage ${{ inputs.stage || github.ref_name }}
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
