--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,39 @@
-[tool.poetry]
+[project]
 name = "admission-bot"
 version = "0.1.0"
-description = ""
-authors = ["Kulunchick <nikolikrasovski@gmail.com>"]
+description = "Add your description here"
+authors = [
+    { name = "Kulunchick", email = "nikolikrasovski@gmail.com" }
+]
+dependencies = [
+    "aiogram==3.0.0b9",
+    "alembic>=1.16.4",
+    "pydantic==2.1.1",
+    "redis==4.6.0",
+    "fastapi==0.100.1",
+    "uvicorn==0.23.2",
+    "phonenumbers==8.13.17",
+    "email-validator==2.0.0.post2",
+    "cachetools==5.3.1",
+    "sqlalchemy[postgresql-asyncpg]>=2.0.42",
+    "jinja2==3.1.2",
+    "uvloop==0.17.0",
+    "pydantic-settings==2.0.2"
+]
 readme = "README.md"
-packages = [{include = "admission_bot"}]
-
-[tool.poetry.dependencies]
-python = "^3.11"
-aiogram = {version = "^3.0.0b9", allow-prereleases = true}
-pydantic = "^2.1.1"
-pydantic-settings = "^2.0.2"
-uvloop = {version = "^0.17.0", platform = "linux"}
-jinja2 = "^3.1.2"
-sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.19"}
-redis = "^4.6.0"
-fastapi = "^0.100.1"
-uvicorn = "^0.23.2"
-alembic = "^1.11.1"
-phonenumbers = "^8.13.17"
-email-validator = "^2.0.0.post2"
-cachetools = "^5.3.1"
-
+requires-python = ">= 3.8"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.rye]
+managed = true
+virtual = true
+dev-dependencies = []
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/admission_bot"]
