--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,18 @@ authors = [
     { name = "Kulunchick", email = "nikolikrasovski@gmail.com" }
 ]
 dependencies = [
-    "aiogram==3.0.0b9",
+    "aiogram>=3.21.0",
     "alembic>=1.16.4",
-    "pydantic==2.1.1",
-    "redis==4.6.0",
-    "fastapi==0.100.1",
-    "uvicorn==0.23.2",
-    "phonenumbers==8.13.17",
-    "email-validator==2.0.0.post2",
-    "cachetools==5.3.1",
+    "pydantic>=2.1.1",
+    "redis>=4.6.0",
+    "fastapi>=0.100.1",
+    "uvicorn>=0.23.2",
+    "phonenumbers>=8.13.17",
+    "email-validator>=2.0.0.post2",
+    "cachetools>=5.3.1",
     "sqlalchemy[postgresql-asyncpg]>=2.0.42",
-    "jinja2==3.1.2",
-    "uvloop==0.17.0",
-    "pydantic-settings==2.0.2"
+    "jinja2>=3.1.2",
+    "pydantic-settings>=2.0.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
