--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,15 @@ authors = [
     { name = "Kulunchick", email = "nikolikrasovski@gmail.com" }
 ]
 dependencies = [
-    "aiogram>=3.21.0",
-    "alembic>=1.16.4",
-    "pydantic>=2.1.1",
-    "redis>=4.6.0",
-    "fastapi>=0.100.1",
-    "uvicorn>=0.23.2",
-    "phonenumbers>=8.13.17",
-    "email-validator>=2.0.0.post2",
-    "cachetools>=5.3.1",
-    "sqlalchemy[postgresql-asyncpg]>=2.0.42",
-    "jinja2>=3.1.2",
-    "pydantic-settings>=2.0.2",
+    "aiogram>=3.10.0",
+    "fastapi==0.111.0",
+    "cachetools>=5.3.3",
+    "jinja2>=3.1.4",
+    "pydantic-settings==2.3.4",
+    "uvicorn==0.30.1",
+    "mangum>=0.17.0",
+    "aiogram-dialog>=2.1.0",
+    "email-validator>=2.2.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
