--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "mangum>=0.17.0",
     "aiogram-dialog>=2.1.0",
     "email-validator>=2.2.0",
+    "uvloop>=0.21.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
